--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Title Tag -->
-	<title>WMSoftMedia</title>
+	<title>SoftGenius</title>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="images/favicon.png">
@@ -80,7 +80,7 @@
 				<div class="col-md-2 col-sm-12 col-xs-12">
 					<!-- Logo -->
 					<div class="logo">
-						<a href="index.html">WMSoftMedia</a>
+						<a href="index.html">SoftGenius</a>
 					</div>
 					<!--/ End Logo -->
 					<div class="mobile-nav"></div>
@@ -182,7 +182,7 @@
 										<!-- End About Image -->
 										<div class="col-md-8 col-sm-12 col-xs-12">
 											<div class="content">
-												<p>"Welcome to WMSoftMedia"</p>
+												<p>"Welcome to SoftGenius"</p>
 
 												<p> Able to develop projects of
 													various field including web, mobile, Windows and Linux applications.
@@ -750,7 +750,7 @@
 						<div class="single-testimonial">
 							<div class="testimonial-content">
 								<i class="fa fa-quote-left"></i>
-								<p>WMSoftMedia is a very talented programmer team with insane skills! These guys gave my
+								<p>SoftGenius is a very talented programmer team with insane skills! These guys gave my
 									project all and
 									more and delivered very
 									satisfactory work! Do yourself a favor and hire this team. You won't regret it. I
@@ -775,7 +775,7 @@
 						<div class="single-testimonial">
 							<div class="testimonial-content">
 								<i class="fa fa-quote-left"></i>
-								<p>WMSoftMedia is very talented and ethic to finish the project in time and in budget. I
+								<p>SoftGenius is very talented and ethic to finish the project in time and in budget. I
 									am very satisfied with their work and
 									definitely will work with this team again in the upcoming projects. Highly
 									recommended!
@@ -945,7 +945,7 @@
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<!-- Copyright -->
 					<div class="copyright">
-						<p>&copy; Copyright 2017 WMSoftMedia.</p>
+						<p>&copy; Copyright 2017 SoftGenius.</p>
 					</div>
 					<!--/ End Copyright -->
 				</div>
